--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | 梦幻对决</title>
+    <title>Unity WebGL Player | Ulti Survival</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">梦幻对决</div>
+        <div id="unity-build-title">Ulti Survival</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Builds.loader.js";
+      var loaderUrl = buildUrl + "/WebGl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Builds.data.unityweb",
-        frameworkUrl: buildUrl + "/Builds.framework.js.unityweb",
-        codeUrl: buildUrl + "/Builds.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGl.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGl.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGl.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Salted Caramel",
-        productName: "梦幻对决",
+        companyName: "Funloop",
+        productName: "Ulti Survival",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
